3822B1PE2/3_naive_gemm_omp/makhov_mikhail/log.txt
/home/crazyproger/sandbox/gpu-2025/3822B1PE2/3_naive_gemm_omp/makhov_mikhail/naive_gemm_omp.cpp: In function ‘std::vector<float> NaiveGemmOMP(const std::vector<float>&, const std::vector<float>&, int)’:
/home/crazyproger/sandbox/gpu-2025/3822B1PE2/3_naive_gemm_omp/makhov_mikhail/naive_gemm_omp.cpp:27:9: error: not enough for loops to collapse
   27 |         const int i_offset = i * n;
      |         ^~~~~
/home/crazyproger/sandbox/gpu-2025/3822B1PE2/3_naive_gemm_omp/makhov_mikhail/naive_gemm_omp.cpp:27:30: error: ‘i’ was not declared in this scope
   27 |         const int i_offset = i * n;
      |                              ^
/home/crazyproger/sandbox/gpu-2025/3822B1PE2/3_naive_gemm_omp/makhov_mikhail/naive_gemm_omp.cpp:42:13: error: expected iteration declaration or initialization
   42 |             for (; k < n; ++k) {
      |             ^~~
